[package]
name = "skia-vulkan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
bench = false

[[bin]]
name = "example"
test = false
bench = false

[dependencies]
skia-safe = { version = "0", features = ["vulkan"] }
winit = "0"
log = "0"
env_logger = "0"
itertools = "0"
ash = "0"
ash-window = "0"
